feat: Adicionando autenticação JWT e protegendo rotas